# CVElk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CVElk.sh  Dockerfile  LICENSE  Makefile  README.md  README.old.md  REFACTORING_PLAN.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
Dashboard/: dashboard.ndjson
NVData/: Dockerfile  NVData.py  README.md  config.yml.example  pyproject.toml  requirements.txt  urls.txt
NVData/app/: api.py  config.example.yml  main.py  util.py
NVData/nvdata/: config.example.yml  main.py
docker/: .env.example  docker-compose.dev.yml  docker-compose.yml
docker/certs/: .gitkeep
src/cvelk/: __init__.py  __main__.py  cli.py  config.py
src/cvelk/models/: __init__.py  cve.py  epss.py  kev.py
src/cvelk/resources/: setup_dashboard.py
src/cvelk/resources/dashboards/: cvelk.ndjson
src/cvelk/services/: __init__.py  cve_list_v5_service.py  elasticsearch_service.py  epss_service.py  kev_service.py  kibana_service.py  nvd_service.py
src/cvelk/utils/: __init__.py  http_client.py
tests/: __init__.py  conftest.py
tests/unit/: test_models_cve.py  test_models_epss.py  test_models_kev.py
