[tool.poetry]
name = "nvdata"
version = "0.1.0"
description = "Pull data from NVD and put it into Elasticsearch"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.5.1"
elasticsearch = "8.5.0"
eland = "8.3.0"
envyaml = "^1.10.211231"
requests = "^2.31.0"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
